# llm_SmolLM

./: .gitignore  README.md  instruction-data-with-response.json  main.ipynb  main_alpaca_prompt.ipynb  main_lora.ipynb  main_phi3_prompt.ipynb  main_smollm_prompt.ipynb  model_evaluation.ipynb  pyproject.toml
