[tool.poetry]
name = "llm-smollm"
version = "0.1.0"
description = ""
authors = ["pytholic <rajahaseeb147@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.42.4"
notebook = "^7.2.1"
torch = "^2.3.1"
tiktoken = "^0.7.0"
matplotlib = "^3.9.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
